[project]
name = "stock-tools-mcp"
version = "0.1.0"
description = "MCP server for stock tools"
authors = [
    {name = "Chris Lawcock", email = "lawcockc@onyxrd.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mcp>=1.0.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.20.0,<3.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
stock-tools-mcp-server = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
include = ["server.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]